<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros_signal</name>
  <version>0.0.0</version>
  <description>Tools for signal monitoring in ROS2</description>

  <maintainer email="biaggi.alessandro.official@gmail.com">Biaggi Alessandro</maintainer>

  <license>Apache License 2.0</license>

  <author email="biaggi.alessandro.official@gmail.com">Biaggi Alessandro</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>ros_signal_interfaces</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
